Update schema data to match migration schema
